Card component now aligning to the container/outline correctly.

--- a/packages/frontend/src/map-contents/planted-dashboard/PlantedDash.scss
+++ b/packages/frontend/src/map-contents/planted-dashboard/PlantedDash.scss
@@ -1,10 +1,13 @@
-.dashboard {
-	// margin-left: 10vh;
+.card-holder {
+	margin-left: 10vh;
   margin: 2vh 10vh 0 10vh;
   border: 0.75vw solid #2d2d2d;
   border-radius: 1vw;
   width: 30vw;
   height: 75vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .map-counter {
